version/dev/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/MeshWorkflowControl.rst.txt
.. vale off



:class:`MeshWorkflowControl`
============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.MeshWorkflowControl

   Bases: :py:obj:`object`


   
   Object that wraps IDSEngineeringModelControl.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MeshWorkflowControl

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AppendData`
            - Gets or sets whether to append the mesh data being read to the current PrimeMesh model or to clear the model content before the mesh data is being read. The default value is false.
          * - :py:attr:`~AutomaticExternalScope`
            - Gets or sets whether to define programmatically the external scoping method and pattern for the external enclosure. The default value is false.
          * - :py:attr:`~CenterPlaneNormalOffset`
            - It defines the desired offset of the plane of the hemisphere from the model.
          * - :py:attr:`~CenterPosition`
            - It is defined by “Centered”, “Minimal”, and “User Defined”.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~ConstantHeight`
            - Height of a single layer of mesh elements.
          * - :py:attr:`~ControlDataDefinition`
            - This property is used to define if the control data is defined by value or by settings.
          * - :py:attr:`~ControlType`
            - Returns the type of the control.
          * - :py:attr:`~CoordinateSystem`
            - Gets or sets the Coordinate System object used to define the material point location.
          * - :py:attr:`~CreateFaceZone`
            - Gets or sets whether to create a new face zone.
          * - :py:attr:`~CreateQuads`
            - Gets or sets whether to create quadratic elements. The default value is false.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DeleteEmptyVolumes`
            - This property is used to enable or disable the automatic deletion of empty topo volumes  during mesh to topology conversion. The default value is false.
          * - :py:attr:`~DeleteInputScope`
            - Gets or sets whether to delete of input scope after wrapping. The default value is false.
          * - :py:attr:`~DihedralAngle`
            - The dihedral angle is the angle between the normal vectors of two element faces.
          * - :py:attr:`~EdgeLabelName`
            - This property is used to rename the default edge label name generated during execution of step.
          * - :py:attr:`~ElementSize`
            - Define element size to achieve desired mesh results. User can achieve coarse, medium, or fine mesh by varying this value.
          * - :py:attr:`~EnableCheckpoint`
            - Flag whether to enable a checkpoint or not. The default value is false.
          * - :py:attr:`~ExcludeEnclosure`
            - Gets or sets whether to exclude the enclosure from the wrapper scope . The default value is false.
          * - :py:attr:`~ExternalLabelName`
            - This property is used to rename the default external label name generated during execution of step.
          * - :py:attr:`~ExternalScopeDefinition`
            - It is defined by value or outcome depending on if the External scope is defined manual by the user or defined based on a previous outcome.
          * - :py:attr:`~ExternalScopeMethod`
            - The method can be label/zone/part and it is applied to external region of enclosure.
          * - :py:attr:`~ExternalScopeOutcome`
            - If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
          * - :py:attr:`~ExternalScopePattern`
            - The value can be a name of a region or a predefined patterns to select multiple region names.
          * - :py:attr:`~FaceZoneByPart`
            - Gets or sets whether to define an independent face zone for each input part.
          * - :py:attr:`~FaceZoneName`
            - This property is used to define the name of the default face zone name generated during execution of step.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~Filename`
            - Assign full path to the filename would like to Import/Export.
          * - :py:attr:`~Filenames`
            - Assign paths with ‘|’ seperator to this property to read multiple files, pass without seperator if single file.
          * - :py:attr:`~GrowthRate`
            - Gradient of element size as each layer grows.
          * - :py:attr:`~HemisphereCenterModality`
            - This property is used to define the rule for the computation of the center of the hemispherical enclosure.
          * - :py:attr:`~HemisphereOrientationModality`
            - This property is used to define the rule for the computation of the orientation of the hemispherical enclosure.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InnerScopeDefinition`
            - It is defined by value or outcome depending on if the Inner scope is defined manually by the user or defined based on a previous outcome.
          * - :py:attr:`~InnerScopeMethod`
            - The method can be label/zone/part and it is applied to inner region of enclosure.
          * - :py:attr:`~InnerScopeOutcome`
            - If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
          * - :py:attr:`~InnerScopePattern`
            - The value can be a name of a region or a predefined patterns to select multiple region names.
          * - :py:attr:`~InternalLabelName`
            - This property is used to rename the default Internal label name generated during execution of step.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~LabelName`
            - This property is used to rename the default label name generated during execution of step.
          * - :py:attr:`~Material`
            - Gets or sets the Material.
          * - :py:attr:`~MaterialName`
            - Gets or sets the Material Name.
          * - :py:attr:`~MaterialPointDefinition`
            - Gets or sets the material point definition type.
          * - :py:attr:`~MaterialPointType`
            - It defines the type of material point, it can be “Include” or “Exclude”.
          * - :py:attr:`~MeshFlowControl`
            - This property gives control over the flow of mesh during surface mesh generation. The supported modes are None, and Global Cartesian.
          * - :py:attr:`~MinimalNumberOfVolumetricLayers`
            - It determines the minimal number of layers of volume elements to be created around the scoped body.
          * - :py:attr:`~MinimalRadius`
            - It defines the desired minimal radius of the spherical enclosure.
          * - :py:attr:`~NumberOfAttempts`
            - Number of attempts for mesh convergence.
          * - :py:attr:`~NumberOfLayers`
            - Number of layers of mesh elements.
          * - :py:attr:`~PartName`
            - This property allows user to rename the default part name generated during wrap operation.
          * - :py:attr:`~PercentageIncrement`
            - The number of volumetric Layers determines the number of layers. This property decides whether all the layers are an equal size (default 0.0) or they should gradually increase the size of volume element than previous element.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~RegionType`
            - It is defined by Material Point or External.
          * - :py:attr:`~Remesh`
            - Gets or sets whether to allow the remesh of already meshed volumes. The default value is false.
          * - :py:attr:`~RepairModel`
            - Gets or sets whether to repair the PrimeMesh model after the reading operation is executed. The default value is false.
          * - :py:attr:`~RestrictBoundaryNodes`
            - Gets or sets whether to restrict the boundary nodes displacement. The default value is true.
          * - :py:attr:`~ReverseSurfaceOrientation`
            - Reverse Surface Orientation. The default value is false.
          * - :py:attr:`~ScaleFactor`
            - Scale Factor is used to scale shapes in different dimensions.
          * - :py:attr:`~ScopeDefinition`
            - It is defined by value or outcome.
          * - :py:attr:`~ScopeMethod`
            - The method can be label/zone/part.
          * - :py:attr:`~ScopeOutcome`
            - If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
          * - :py:attr:`~ScopePattern`
            - The value can be a name of a region or a predefined patterns to select multiple region names.
          * - :py:attr:`~SizeFieldName`
            - This property is used to define the name of the size field to apply to the meshing operation.
          * - :py:attr:`~SmoothingIterations`
            - Allows user to input number of iterations needed to achieve good mesh results.
          * - :py:attr:`~SmoothingPreserveVolume`
            - Gets or sets whether to enable and disable the volume preserving smoothing. If enabled, the smoothing will preserve the initial volume of the input. The default value is false.
          * - :py:attr:`~SphereCenterModality`
            - This property is used to define the rule for the computation of the center of the spherical enclosure.
          * - :py:attr:`~SurfaceMeshType`
            - This property gives control over what type of elements need to be generated in the mesh. The supported surface mesh types are Triangles and Quadrilaterals.
          * - :py:attr:`~TargetSkewness`
            - Set Limit to the skewness of an element. Higher the skewness value, expecting a better mesh result.
          * - :py:attr:`~Thickness`
            - Gets or sets the Thickness to be assigned to the scoped zone.
          * - :py:attr:`~TopologyConformalConnection`
            - Gets or sets whether to preserve the topology connection for the newly created faces. The default value is false.
          * - :py:attr:`~TriangleCountReductionMode`
            - This property gives control over the mode/degree of triangle count reduction during surface mesh generation. The supported modes are None, Conservative and Aggressive.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~VolumeMeshType`
            - Type of Volume elements such as Tetrahedrons and Hex.
          * - :py:attr:`~VolumeZoneName`
            - This property is used to rename the default volume zone name generated during execution of step.
          * - :py:attr:`~WrapByParts`
            - Gets or sets whether to wrap each part separately. The default value is false.
          * - :py:attr:`~XCoordinate`
            - It defines the X Coordinate.
          * - :py:attr:`~YCoordinate`
            - It defines the Y Coordinate.
          * - :py:attr:`~ZCoordinate`
            - It defines the Z Coordinate.







Property detail
---------------
.. py:property:: AppendData
   :type: Optional[System.Boolean]

   
   Gets or sets whether to append the mesh data being read to the current PrimeMesh model or to clear the model content before the mesh data is being read. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutomaticExternalScope
   :type: Optional[System.Boolean]

   
   Gets or sets whether to define programmatically the external scoping method and pattern for the external enclosure. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: CenterPlaneNormalOffset
   :type: Optional[Ansys.Core.Units.Quantity]

   
   It defines the desired offset of the plane of the hemisphere from the model.
















   ..
       !! processed by numpydoc !!

.. py:property:: CenterPosition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SphereCenterDefinitionType]

   
   It is defined by “Centered”, “Minimal”, and “User Defined”.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[System.Collections.Generic.IList[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]

   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: ConstantHeight
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Height of a single layer of mesh elements.
















   ..
       !! processed by numpydoc !!

.. py:property:: ControlDataDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlDataDefinedByType]

   
   This property is used to define if the control data is defined by value or by settings.
















   ..
       !! processed by numpydoc !!

.. py:property:: ControlType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlType]

   
   Returns the type of the control.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]

   
   Gets or sets the Coordinate System object used to define the material point location.
















   ..
       !! processed by numpydoc !!

.. py:property:: CreateFaceZone
   :type: Optional[System.Boolean]

   
   Gets or sets whether to create a new face zone.
















   ..
       !! processed by numpydoc !!

.. py:property:: CreateQuads
   :type: Optional[System.Boolean]

   
   Gets or sets whether to create quadratic elements. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]

   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DeleteEmptyVolumes
   :type: Optional[System.Boolean]

   
   This property is used to enable or disable the automatic deletion of empty topo volumes  during mesh to topology conversion. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: DeleteInputScope
   :type: Optional[System.Boolean]

   
   Gets or sets whether to delete of input scope after wrapping. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: DihedralAngle
   :type: Optional[Ansys.Core.Units.Quantity]

   
   The dihedral angle is the angle between the normal vectors of two element faces.
















   ..
       !! processed by numpydoc !!

.. py:property:: EdgeLabelName
   :type: Optional[System.String]

   
   This property is used to rename the default edge label name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementSize
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Define element size to achieve desired mesh results. User can achieve coarse, medium, or fine mesh by varying this value.
















   ..
       !! processed by numpydoc !!

.. py:property:: EnableCheckpoint
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.CheckpointDefinitionType]

   
   Flag whether to enable a checkpoint or not. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExcludeEnclosure
   :type: Optional[System.Boolean]

   
   Gets or sets whether to exclude the enclosure from the wrapper scope . The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalLabelName
   :type: Optional[System.String]

   
   This property is used to rename the default external label name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]

   
   It is defined by value or outcome depending on if the External scope is defined manual by the user or defined based on a previous outcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]

   
   The method can be label/zone/part and it is applied to external region of enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]

   
   If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalScopePattern
   :type: Optional[System.String]

   
   The value can be a name of a region or a predefined patterns to select multiple region names.
















   ..
       !! processed by numpydoc !!

.. py:property:: FaceZoneByPart
   :type: Optional[System.Boolean]

   
   Gets or sets whether to define an independent face zone for each input part.
















   ..
       !! processed by numpydoc !!

.. py:property:: FaceZoneName
   :type: Optional[System.String]

   
   This property is used to define the name of the default face zone name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[System.Collections.Generic.IEnumerable[Ansys.ACT.Automation.Mechanical.Figure]]

   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: Filename
   :type: Optional[System.String]

   
   Assign full path to the filename would like to Import/Export.
















   ..
       !! processed by numpydoc !!

.. py:property:: Filenames
   :type: Optional[System.String]

   
   Assign paths with ‘|’ seperator to this property to read multiple files, pass without seperator if single file.
















   ..
       !! processed by numpydoc !!

.. py:property:: GrowthRate
   :type: Optional[System.Double]

   
   Gradient of element size as each layer grows. 
















   ..
       !! processed by numpydoc !!

.. py:property:: HemisphereCenterModality
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.HemisphereCenterDefinitionType]

   
   This property is used to define the rule for the computation of the center of the hemispherical enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: HemisphereOrientationModality
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.HemisphereOrientationDefinitionType]

   
   This property is used to define the rule for the computation of the orientation of the hemispherical enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[System.Collections.Generic.IEnumerable[Ansys.ACT.Automation.Mechanical.Image]]

   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InnerScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]

   
   It is defined by value or outcome depending on if the Inner scope is defined manually by the user or defined based on a previous outcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: InnerScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]

   
   The method can be label/zone/part and it is applied to inner region of enclosure. 
















   ..
       !! processed by numpydoc !!

.. py:property:: InnerScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]

   
   If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: InnerScopePattern
   :type: Optional[System.String]

   
   The value can be a name of a region or a predefined patterns to select multiple region names.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalLabelName
   :type: Optional[System.String]

   
   This property is used to rename the default Internal label name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSEngineeringModelControlAuto]

   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: LabelName
   :type: Optional[System.String]

   
   This property is used to rename the default label name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: Material
   :type: Optional[System.String]

   
   Gets or sets the Material.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialName
   :type: Optional[System.String]

   
   Gets or sets the Material Name.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialPointDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.MaterialPointDefineByType]

   
   Gets or sets the material point definition type.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialPointType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.MaterialPointType]

   
   It defines the type of material point, it can be “Include” or “Exclude”.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshFlowControl
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.MeshFlowControl]

   
   This property gives control over the flow of mesh during surface mesh generation. The supported modes are None, and Global Cartesian.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimalNumberOfVolumetricLayers
   :type: Optional[System.Int32]

   
   It determines the minimal number of layers of volume elements to be created around the scoped body.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimalRadius
   :type: Optional[Ansys.Core.Units.Quantity]

   
   It defines the desired minimal radius of the spherical enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfAttempts
   :type: Optional[System.Int32]

   
   Number of attempts for mesh convergence.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfLayers
   :type: Optional[System.Int32]

   
   Number of layers of mesh elements. 
















   ..
       !! processed by numpydoc !!

.. py:property:: PartName
   :type: Optional[System.String]

   
   This property allows user to rename the default part name generated during wrap operation.
















   ..
       !! processed by numpydoc !!

.. py:property:: PercentageIncrement
   :type: Optional[System.Double]

   
   The number of volumetric Layers determines the number of layers. This property decides whether all the layers are an equal size (default 0.0) or they should gradually increase the size of volume element than previous element.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[System.Collections.Generic.IReadOnlyList[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: RegionType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.WrapperRegionType]

   
   It is defined by Material Point or External.
















   ..
       !! processed by numpydoc !!

.. py:property:: Remesh
   :type: Optional[System.Boolean]

   
   Gets or sets whether to allow the remesh of already meshed volumes. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: RepairModel
   :type: Optional[System.Boolean]

   
   Gets or sets whether to repair the PrimeMesh model after the reading operation is executed. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: RestrictBoundaryNodes
   :type: Optional[System.Boolean]

   
   Gets or sets whether to restrict the boundary nodes displacement. The default value is true.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReverseSurfaceOrientation
   :type: Optional[System.Boolean]

   
   Reverse Surface Orientation. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScaleFactor
   :type: Optional[System.Double]

   
   Scale Factor is used to scale shapes in different dimensions.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]

   
   It is defined by value or outcome. 
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]

   
   The method can be label/zone/part. 
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]

   
   If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopePattern
   :type: Optional[System.String]

   
   The value can be a name of a region or a predefined patterns to select multiple region names.
















   ..
       !! processed by numpydoc !!

.. py:property:: SizeFieldName
   :type: Optional[System.String]

   
   This property is used to define the name of the size field to apply to the meshing operation.
















   ..
       !! processed by numpydoc !!

.. py:property:: SmoothingIterations
   :type: Optional[System.Int32]

   
   Allows user to input number of iterations needed to achieve good mesh results.
















   ..
       !! processed by numpydoc !!

.. py:property:: SmoothingPreserveVolume
   :type: Optional[System.Boolean]

   
   Gets or sets whether to enable and disable the volume preserving smoothing. If enabled, the smoothing will preserve the initial volume of the input. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: SphereCenterModality
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SphereCenterDefinitionType]

   
   This property is used to define the rule for the computation of the center of the spherical enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: SurfaceMeshType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SurfaceMeshType]

   
   This property gives control over what type of elements need to be generated in the mesh. The supported surface mesh types are Triangles and Quadrilaterals. 
















   ..
       !! processed by numpydoc !!

.. py:property:: TargetSkewness
   :type: Optional[System.Double]

   
   Set Limit to the skewness of an element. Higher the skewness value, expecting a better mesh result.
















   ..
       !! processed by numpydoc !!

.. py:property:: Thickness
   :type: Optional[System.Double]

   
   Gets or sets the Thickness to be assigned to the scoped zone.
















   ..
       !! processed by numpydoc !!

.. py:property:: TopologyConformalConnection
   :type: Optional[System.Boolean]

   
   Gets or sets whether to preserve the topology connection for the newly created faces. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: TriangleCountReductionMode
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.TriangleCountReductionMode]

   
   This property gives control over the mode/degree of triangle count reduction during surface mesh generation. The supported modes are None, Conservative and Aggressive.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[System.Collections.Generic.IReadOnlyList[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: VolumeMeshType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.VolumeMeshType]

   
   Type of Volume elements such as Tetrahedrons and Hex.
















   ..
       !! processed by numpydoc !!

.. py:property:: VolumeZoneName
   :type: Optional[System.String]

   
   This property is used to rename the default volume zone name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: WrapByParts
   :type: Optional[System.Boolean]

   
   Gets or sets whether to wrap each part separately. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: XCoordinate
   :type: Optional[Ansys.Core.Units.Quantity]

   
   It defines the X Coordinate.
















   ..
       !! processed by numpydoc !!

.. py:property:: YCoordinate
   :type: Optional[Ansys.Core.Units.Quantity]

   
   It defines the Y Coordinate.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZCoordinate
   :type: Optional[Ansys.Core.Units.Quantity]

   
   It defines the Z Coordinate.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> System.Void

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: System.String) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> System.Void

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: System.String) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> System.Void

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: System.Boolean, children: System.Collections.Generic.IList[ChildrenType]) -> System.Collections.Generic.IList[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: System.String) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> System.Void

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: System.String) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: System.String) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: System.String) -> System.Void

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!



.. vale on