version/dev/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/MeshWorkflowControl.rst.txt
.. vale off



:class:`MeshWorkflowControl`
============================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.MeshWorkflowControl

   Bases: :py:obj:`object`


   
   Object that wraps IDSEngineeringModelControl.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MeshWorkflowControl

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AppendData`
            - Gets or sets whether to append the mesh data being read to the current PrimeMesh model or to clear the model content before the mesh data is being read. The default value is false.
          * - :py:attr:`~AutomaticExternalScope`
            - Gets or sets whether to define programmatically the external scoping method and pattern for the external enclosure. The default value is false.
          * - :py:attr:`~BaseFaceLabel`
            - Gets or sets the label to be used for the base face.
          * - :py:attr:`~BaseFaceScopeDefinition`
            - Gets or sets the type of scope definition for the base face scoping. Default: Value
          * - :py:attr:`~BaseFaceScopeMethod`
            - Gets or sets the scoping method for the base face scoping. Default: Label.
          * - :py:attr:`~BaseFaceScopeOutcome`
            - Gets or sets the scope outcome from a previous operation. Applicable only if BaseFaceScopeOutcome is set to Outcome.
          * - :py:attr:`~BaseFaceScopePattern`
            - Gets or sets the part, zone or label name pattern that defines the scope. Applicable only if BaseFaceScopeOutcome is set to Value.
          * - :py:attr:`~CenterPlaneNormalOffset`
            - It defines the desired offset of the plane of the hemisphere from the model.
          * - :py:attr:`~CenterPosition`
            - It is defined by “Centered”, “Minimal”, and “User Defined”.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~ConformalMeshOnContactSurfaces`
            - Gets or sets whether to decide creation of conformal mesh at contact surfaces.
          * - :py:attr:`~ConstantHeight`
            - Height of a single layer of mesh elements.
          * - :py:attr:`~ControlDataDefinition`
            - This property is used to define if the control data is defined by value or by settings.
          * - :py:attr:`~ControlType`
            - Returns the type of the control.
          * - :py:attr:`~CoordinateSystem`
            - Gets or sets the Coordinate System object used to define the material point location.
          * - :py:attr:`~CreateFaceZone`
            - Gets or sets whether to create a new face zone.
          * - :py:attr:`~CreateQuadraticElements`
            - Gets or sets whether to create quadratic elements. The default value is false.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DecompositionType`
            - Gets or sets the decomposition type used by the MultiZone mesher. Defaults to "Program Controlled".
          * - :py:attr:`~DefaultOffsetSize`
            - Gets or sets the size of the offset layers to be used during the stack base operation.
          * - :py:attr:`~DefeatureTolerance`
            - Gets or sets the defeature tolerance applied during meshing. Applicable only if DefeatureToleranceDefineBy is "UserDefined".
          * - :py:attr:`~DefeatureToleranceDefineBy`
            - Gets or sets how the Defeature Tolerance is defined for the MultiZone mesher. Defaults to  "Program Controlled".
          * - :py:attr:`~DeleteEmptyVolumes`
            - This property is used to enable or disable the automatic deletion of empty topo volumes  during mesh to topology conversion. The default value is false.
          * - :py:attr:`~DeleteInputScope`
            - Gets or sets whether to delete of input scope after wrapping. The default value is false.
          * - :py:attr:`~DihedralAngle`
            - The dihedral angle is the angle between the normal vectors of two element faces.
          * - :py:attr:`~DirectionX`
            - Gets or sets the X component of the direction vector, with respect to the Global Coordinate System.
          * - :py:attr:`~DirectionY`
            - Gets or sets the Y component of the direction vector, with respect to the Global Coordinate System.
          * - :py:attr:`~DirectionZ`
            - Gets or sets the Z component of the direction vector, with respect to the Global Coordinate System.
          * - :py:attr:`~EdgeLabelName`
            - This property is used to rename the default edge label name generated during execution of step.
          * - :py:attr:`~ElementSize`
            - Define element size to achieve desired mesh results. User can achieve coarse, medium, or fine mesh by varying this value.
          * - :py:attr:`~ElementsPerGap`
            - Gets or sets the minimum number of element layers to be generated per gap for the Proximity Sizing control. The default values is 3.
          * - :py:attr:`~EnableCheckpoint`
            - Flag whether to enable a checkpoint or not. The default value is false.
          * - :py:attr:`~ExcludeEnclosure`
            - Gets or sets whether to exclude the enclosure from the wrapper scope . The default value is false.
          * - :py:attr:`~ExcludeScopeDefinition`
            - Gets or sets the type of scope definition for the Hole Patching exclusion scoping. Default: Value
          * - :py:attr:`~ExcludeScopeMethod`
            - Gets or sets the scoping method for the Hole Patching exclusion scoping. Default: Label.
          * - :py:attr:`~ExcludeScopeOutcome`
            - Gets or sets the scope outcome from a previous operation for the Hole Patching exclusion scoping. Applicable only if scope is defined by outcome.
          * - :py:attr:`~ExcludeScopePattern`
            - Gets or sets the part, zone or label name pattern for the Hole Patching exclusion scoping. Applicable only if scope is defined by value.
          * - :py:attr:`~ExternalLabelName`
            - This property is used to rename the default external label name generated during execution of step.
          * - :py:attr:`~ExternalScopeDefinition`
            - It is defined by value or outcome depending on if the External scope is defined manual by the user or defined based on a previous outcome.
          * - :py:attr:`~ExternalScopeMethod`
            - The method can be label/zone/part and it is applied to external region of enclosure.
          * - :py:attr:`~ExternalScopeOutcome`
            - If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
          * - :py:attr:`~ExternalScopePattern`
            - The value can be a name of a region or a predefined patterns to select multiple region names.
          * - :py:attr:`~FaceZoneByPart`
            - Gets or sets whether to define an independent face zone for each input part.
          * - :py:attr:`~FaceZoneName`
            - This property is used to define the name of the default face zone name generated during execution of step.
          * - :py:attr:`~FieldName`
            - Gets or sets the label name to be applied.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~Filename`
            - Assign full path to the filename would like to Import/Export.
          * - :py:attr:`~Filenames`
            - Assign paths with ‘|’ seperator to this property to read multiple files, pass without seperator if single file.
          * - :py:attr:`~FreeFaceMeshType`
            - Gets or sets the type of elements for the MultiZone mesher free face mesh. Defaults to "All Quads".
          * - :py:attr:`~FreeVolumeMeshType`
            - Gets or sets how free mesh blocks should be treated by the MultiZone meshing algorithm. Defaults to "NotAllowed".
          * - :py:attr:`~GrowthRate`
            - Gradient of element size as each layer grows.
          * - :py:attr:`~HemisphereCenterModality`
            - This property is used to define the rule for the computation of the center of the hemispherical enclosure.
          * - :py:attr:`~HemisphereOrientationModality`
            - This property is used to define the rule for the computation of the orientation of the hemispherical enclosure.
          * - :py:attr:`~IgnoreOrientation`
            - Gets or sets whether to ignore the face normal orientation while calculating the proximity for the Proximity Sizing control. The default value is False.
          * - :py:attr:`~IgnoreSelfProximity`
            - Gets or sets whether to ignore the proximity between two faces from the same face zone while calculating the proximity for the Proximity Sizing control. The default value is True.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InnerScopeDefinition`
            - It is defined by value or outcome depending on if the Inner scope is defined manually by the user or defined based on a previous outcome.
          * - :py:attr:`~InnerScopeMethod`
            - The method can be label/zone/part and it is applied to inner region of enclosure.
          * - :py:attr:`~InnerScopeOutcome`
            - If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
          * - :py:attr:`~InnerScopePattern`
            - The value can be a name of a region or a predefined patterns to select multiple region names.
          * - :py:attr:`~InputMeshScopeDefinition`
            - Gets or sets the type of scope definition for the Input Mesh scoping. Default: Value.
          * - :py:attr:`~InputMeshScopeMethod`
            - Gets or sets the scoping method for the Input Mesh scoping. Default: Label.
          * - :py:attr:`~InputMeshScopeOutcome`
            - Gets or sets the scope outcome for Input Mesh scoping from a previous operation. Applicable only if InputMeshScopeDefinition is set to Outcome.
          * - :py:attr:`~InputMeshScopePattern`
            - Gets or sets the zone or label name pattern that defines the Input Mesh scoping. Applicable only if InputMeshScopeDefinition is set to Value.
          * - :py:attr:`~InternalLabelName`
            - This property is used to rename the default Internal label name generated during execution of step.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~LabelName`
            - This property is used to rename the default label name generated during execution of step.
          * - :py:attr:`~LateralDefeatureSize`
            - Gets or sets the defeature size to be used along the lateral direction of stacking.
          * - :py:attr:`~Material`
            - Gets or sets the Material.
          * - :py:attr:`~MaterialName`
            - Gets or sets the Material Name.
          * - :py:attr:`~MaterialPointDefinition`
            - Gets or sets the material point definition type.
          * - :py:attr:`~MaterialPointType`
            - It defines the type of material point, it can be “Include” or “Exclude”.
          * - :py:attr:`~MaxHoleSize`
            - Gets or sets the maximum size of holes to be considered for Wrapper Leak Prevention and Hole Patching.
          * - :py:attr:`~MaxSize`
            - Gets or sets the maximum size to be used for the volumetric size field sizing computation in the Proximity Sizing and Curvature Sizing controls. This is a length value.
          * - :py:attr:`~MergeNodesTolerance`
            - Gets or sets the tolerance within which nodes are to be merged.
          * - :py:attr:`~MergeNodesToleranceType`
            - Gets or sets the merge nodes tolerance type to be used when executing Merge Nodes operation. The default value is Absolute.
          * - :py:attr:`~MeshFlowControl`
            - This property gives control over the flow of mesh during surface mesh generation. The supported modes are None, and Global Cartesian.
          * - :py:attr:`~MeshedVolumeLabelSuffix`
            - Gets or sets the suffix to be used when defining labels scoped to volumes meshed by the MultiZone mesher. Defaults to "MultiZoneMesh".
          * - :py:attr:`~MinSize`
            - Gets or sets the minimum size to be used for the volumetric size field sizing computation in the Proximity Sizing and Curvature Sizing controls. This is a length value.
          * - :py:attr:`~MinimalNumberOfVolumetricLayers`
            - It determines the minimal number of layers of volume elements to be created around the scoped body.
          * - :py:attr:`~MinimalRadius`
            - It defines the desired minimal radius of the spherical enclosure.
          * - :py:attr:`~MorphRecordingName`
            - This property is used to define the name for matching the morphing recording to apply to the meshing operation.
          * - :py:attr:`~NormalAngle`
            - Gets or sets the maximum allowed normal angle between neighboring elements when computing curvature for the Curvature Sizing control. This value must be between 0 and 180 degrees (0 to π) and defaults to 18 degrees.
          * - :py:attr:`~NumberOfAttempts`
            - Number of attempts for mesh convergence.
          * - :py:attr:`~NumberOfDivisions`
            - Gets or sets the number of divisions for the scoped edges.
          * - :py:attr:`~NumberOfLayers`
            - Number of layers of mesh elements.
          * - :py:attr:`~OffsetFileName`
            - Gets or sets the full file path to the .csv file containing the offset coordinates for replication.
          * - :py:attr:`~OriginX`
            - Gets or sets the X coordinate of origin (location of base face) in the volume flattening step.
          * - :py:attr:`~OriginY`
            - Gets or sets the Y coordinate of origin (location of base face) in the volume flattening step.
          * - :py:attr:`~OriginZ`
            - Gets or sets the Z coordinate of origin (location of base face) in the volume flattening step.
          * - :py:attr:`~PartName`
            - Gets or sets the part name to be used when generating.
          * - :py:attr:`~PercentageIncrement`
            - The number of volumetric Layers determines the number of layers. This property decides whether all the layers are an equal size (default 0.0) or they should gradually increase the size of volume element than previous element.
          * - :py:attr:`~ProjectSideFaces`
            - Gets or sets whether to project the side faces after the extrusion.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~ProtectOnlyBoundaries`
            - Gets or sets whether the topology protection flag is applied only to the exterior boundary of the scoped boundaries or not. Defaults to False.
          * - :py:attr:`~QuadBoundaryLayerFaceScopeDefinition`
            - Gets or sets the type of scope definition for the quad boundary layer face scoping. Default: Value
          * - :py:attr:`~QuadBoundaryLayerFaceScopeMethod`
            - Gets or sets the scoping method for the quad boundary layer face scoping. Default: Label.
          * - :py:attr:`~QuadBoundaryLayerFaceScopeOutcome`
            - Gets or sets the scope outcome from a previous operation. Applicable only if 'QuadBoundaryLayerFaceScopeDefinition' is set to Outcome.
          * - :py:attr:`~QuadBoundaryLayerFaceScopePattern`
            - Gets or sets the part, zone or label name pattern that defines the scope. Applicable only if 'QuadBoundaryLayerFaceScopeDefinition' is set to Value.
          * - :py:attr:`~QuadBoundaryLayerFirstLayerHeight`
            - Gets or sets the height of the first quad layer.
          * - :py:attr:`~QuadBoundaryLayerGrowthRate`
            - Gets or sets the ratio of heights between subsequent quad layers.
          * - :py:attr:`~QuadBoundaryLayerNumberOfDivisions`
            - Gets or sets the number of annular divisions on the washer boundary from where the quad layers are grown.
          * - :py:attr:`~QuadBoundaryLayerNumberOfLayers`
            - Gets or sets the number of quad layers on the washer boundary.
          * - :py:attr:`~RecomputeClosedVolumes`
            - Gets or sets whether to recompute closed volumes after the operation.
          * - :py:attr:`~RegionType`
            - It is defined by Material Point or External.
          * - :py:attr:`~RelativeMergeTolerancePercentage`
            - Gets or sets the percentage of the connected edge lengths to be used as tolerance for merging nodes.
          * - :py:attr:`~Remesh`
            - Gets or sets whether to allow the remesh of already meshed volumes. The default value is false.
          * - :py:attr:`~RepairModel`
            - Gets or sets whether to repair the PrimeMesh model after the reading operation is executed. The default value is false.
          * - :py:attr:`~RestrictBoundaryNodes`
            - Gets or sets whether to restrict the boundary nodes displacement. The default value is true.
          * - :py:attr:`~RetainMeshedVolumes`
            - Gets or sets whether existing mesh on the scoped volumes is to be retained or remeshed.
          * - :py:attr:`~ReverseSurfaceOrientation`
            - Reverse Surface Orientation. The default value is false.
          * - :py:attr:`~ScaleFactor`
            - Scale Factor is used to scale shapes in different dimensions.
          * - :py:attr:`~ScopeDefinition`
            - It is defined by value or outcome.
          * - :py:attr:`~ScopeMethod`
            - The method can be label/zone/part.
          * - :py:attr:`~ScopeOutcome`
            - If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
          * - :py:attr:`~ScopePattern`
            - The value can be a name of a region or a predefined patterns to select multiple region names.
          * - :py:attr:`~SeedFaceScopeDefinition`
            - Gets or sets the type of scope definition for the seed face scoping. Default: Value
          * - :py:attr:`~SeedFaceScopeMethod`
            - Gets or sets the scoping method for the seed face scoping. Default: Label.
          * - :py:attr:`~SeedFaceScopeOutcome`
            - Gets or sets the scope outcome from a previous operation. Applicable only if SeedFaceScopeDefinition is set to Outcome.
          * - :py:attr:`~SeedFaceScopePattern`
            - Gets or sets the part, zone or label name pattern that defines the scope. Applicable only if SeedFaceScopeDefinition is set to Value.
          * - :py:attr:`~SharedTopologyLabelName`
            - Gets or sets the name used as label to scope the shared topology faces which are automatically added as input mesh for MultiZone. Defaults to "MultiZoneMesh/SharedTopologyInputMesh".
          * - :py:attr:`~SizeFieldDefinition`
            - Gets or sets how the control's size field pattern should be defined, either by "Value" or by "Outcome". The default value is "Value".
          * - :py:attr:`~SizeFieldOutcome`
            - Gets or sets the outcome to be used to define the size field pattern when SizeFieldDefinition is set to "Outcome".
          * - :py:attr:`~SizeFieldPattern`
            - This property is used to define the name pattern for matching the size fields to apply to the meshing operation.
          * - :py:attr:`~SmoothingIterations`
            - Allows user to input number of iterations needed to achieve good mesh results.
          * - :py:attr:`~SmoothingPreserveVolume`
            - Gets or sets whether to enable and disable the volume preserving smoothing. If enabled, the smoothing will preserve the initial volume of the input. The default value is false.
          * - :py:attr:`~SourceTargetScopeDefinition`
            - Gets or sets the type of scope definition for the Source/Target scoping. Default: Value.
          * - :py:attr:`~SourceTargetScopeMethod`
            - Gets or sets the scoping method for the Source/Target scoping. Default: Label.
          * - :py:attr:`~SourceTargetScopeOutcome`
            - Gets or sets the scope outcome for the Source/Target scoping from a previous operation. Applicable only if SourceTargetScopeDefinition is set to Outcome.
          * - :py:attr:`~SourceTargetScopePattern`
            - Gets or sets the zone or label name pattern that defines the Source/Target scoping. Applicable only if SourceTargetScopeDefinition is set to Value.
          * - :py:attr:`~SphereCenterModality`
            - This property is used to define the rule for the computation of the center of the spherical enclosure.
          * - :py:attr:`~StackingDefeatureSize`
            - Defines defeature size to be used along the stacking direction.
          * - :py:attr:`~SurfaceMeshType`
            - This property gives control over what type of elements need to be generated in the mesh. The supported surface mesh types are Triangles and Quadrilaterals.
          * - :py:attr:`~SweepingSize`
            - Gets or sets the constant size along the sweeping direction.
          * - :py:attr:`~TargetSkewness`
            - Set Limit to the skewness of an element. Higher the skewness value, expecting a better mesh result.
          * - :py:attr:`~Thickness`
            - Gets or sets the Thickness to be assigned to the scoped zone.
          * - :py:attr:`~TopologyConformalConnection`
            - Gets or sets whether to preserve the topology connection for the newly created faces. The default value is false.
          * - :py:attr:`~TriangleCountReductionMode`
            - This property gives control over the mode/degree of triangle count reduction during surface mesh generation. The supported modes are None, Conservative and Aggressive.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~VolumeMeshType`
            - Type of Volume elements such as Tetrahedrons and Hex.
          * - :py:attr:`~VolumeZoneName`
            - This property is used to rename the default volume zone name generated during execution of step.
          * - :py:attr:`~WrapByParts`
            - Gets or sets whether to wrap each part separately. The default value is false.
          * - :py:attr:`~XCoordinate`
            - It defines the X Coordinate.
          * - :py:attr:`~YCoordinate`
            - It defines the Y Coordinate.
          * - :py:attr:`~ZCoordinate`
            - It defines the Z Coordinate.







Property detail
---------------
.. py:property:: AppendData
   :type: Optional[bool]


   
   Gets or sets whether to append the mesh data being read to the current PrimeMesh model or to clear the model content before the mesh data is being read. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutomaticExternalScope
   :type: Optional[bool]


   
   Gets or sets whether to define programmatically the external scoping method and pattern for the external enclosure. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: BaseFaceLabel
   :type: Optional[str]


   
   Gets or sets the label to be used for the base face.
















   ..
       !! processed by numpydoc !!

.. py:property:: BaseFaceScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   Gets or sets the type of scope definition for the base face scoping. Default: Value
















   ..
       !! processed by numpydoc !!

.. py:property:: BaseFaceScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   Gets or sets the scoping method for the base face scoping. Default: Label.
















   ..
       !! processed by numpydoc !!

.. py:property:: BaseFaceScopeOutcome
   :type: Optional[int]


   
   Gets or sets the scope outcome from a previous operation. Applicable only if BaseFaceScopeOutcome is set to Outcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: BaseFaceScopePattern
   :type: Optional[str]


   
   Gets or sets the part, zone or label name pattern that defines the scope. Applicable only if BaseFaceScopeOutcome is set to Value.
















   ..
       !! processed by numpydoc !!

.. py:property:: CenterPlaneNormalOffset
   :type: Optional[Ansys.Core.Units.Quantity]


   
   It defines the desired offset of the plane of the hemisphere from the model.
















   ..
       !! processed by numpydoc !!

.. py:property:: CenterPosition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SphereCenterDefinitionType]


   
   It is defined by “Centered”, “Minimal”, and “User Defined”.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: ConformalMeshOnContactSurfaces
   :type: Optional[bool]


   
   Gets or sets whether to decide creation of conformal mesh at contact surfaces.
















   ..
       !! processed by numpydoc !!

.. py:property:: ConstantHeight
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Height of a single layer of mesh elements.
















   ..
       !! processed by numpydoc !!

.. py:property:: ControlDataDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlDataDefinedByType]


   
   This property is used to define if the control data is defined by value or by settings.
















   ..
       !! processed by numpydoc !!

.. py:property:: ControlType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlType]


   
   Returns the type of the control.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]


   
   Gets or sets the Coordinate System object used to define the material point location.
















   ..
       !! processed by numpydoc !!

.. py:property:: CreateFaceZone
   :type: Optional[bool]


   
   Gets or sets whether to create a new face zone.
















   ..
       !! processed by numpydoc !!

.. py:property:: CreateQuadraticElements
   :type: Optional[bool]


   
   Gets or sets whether to create quadratic elements. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DecompositionType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.DecompositionType]


   
   Gets or sets the decomposition type used by the MultiZone mesher. Defaults to "Program Controlled". 
















   ..
       !! processed by numpydoc !!

.. py:property:: DefaultOffsetSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the size of the offset layers to be used during the stack base operation.
















   ..
       !! processed by numpydoc !!

.. py:property:: DefeatureTolerance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the defeature tolerance applied during meshing. Applicable only if DefeatureToleranceDefineBy is "UserDefined".
















   ..
       !! processed by numpydoc !!

.. py:property:: DefeatureToleranceDefineBy
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.DefeatureToleranceDefineBy]


   
   Gets or sets how the Defeature Tolerance is defined for the MultiZone mesher. Defaults to  "Program Controlled". 
















   ..
       !! processed by numpydoc !!

.. py:property:: DeleteEmptyVolumes
   :type: Optional[bool]


   
   This property is used to enable or disable the automatic deletion of empty topo volumes  during mesh to topology conversion. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: DeleteInputScope
   :type: Optional[bool]


   
   Gets or sets whether to delete of input scope after wrapping. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: DihedralAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   The dihedral angle is the angle between the normal vectors of two element faces.
















   ..
       !! processed by numpydoc !!

.. py:property:: DirectionX
   :type: Optional[float]


   
   Gets or sets the X component of the direction vector, with respect to the Global Coordinate System.
















   ..
       !! processed by numpydoc !!

.. py:property:: DirectionY
   :type: Optional[float]


   
   Gets or sets the Y component of the direction vector, with respect to the Global Coordinate System.
















   ..
       !! processed by numpydoc !!

.. py:property:: DirectionZ
   :type: Optional[float]


   
   Gets or sets the Z component of the direction vector, with respect to the Global Coordinate System.
















   ..
       !! processed by numpydoc !!

.. py:property:: EdgeLabelName
   :type: Optional[str]


   
   This property is used to rename the default edge label name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Define element size to achieve desired mesh results. User can achieve coarse, medium, or fine mesh by varying this value.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementsPerGap
   :type: Optional[int]


   
   Gets or sets the minimum number of element layers to be generated per gap for the Proximity Sizing control. The default values is 3.
















   ..
       !! processed by numpydoc !!

.. py:property:: EnableCheckpoint
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.CheckpointDefinitionType]


   
   Flag whether to enable a checkpoint or not. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExcludeEnclosure
   :type: Optional[bool]


   
   Gets or sets whether to exclude the enclosure from the wrapper scope . The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExcludeScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   Gets or sets the type of scope definition for the Hole Patching exclusion scoping. Default: Value
















   ..
       !! processed by numpydoc !!

.. py:property:: ExcludeScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   Gets or sets the scoping method for the Hole Patching exclusion scoping. Default: Label.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExcludeScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]


   
   Gets or sets the scope outcome from a previous operation for the Hole Patching exclusion scoping. Applicable only if scope is defined by outcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExcludeScopePattern
   :type: Optional[str]


   
   Gets or sets the part, zone or label name pattern for the Hole Patching exclusion scoping. Applicable only if scope is defined by value.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalLabelName
   :type: Optional[str]


   
   This property is used to rename the default external label name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   It is defined by value or outcome depending on if the External scope is defined manual by the user or defined based on a previous outcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part and it is applied to external region of enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]


   
   If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExternalScopePattern
   :type: Optional[str]


   
   The value can be a name of a region or a predefined patterns to select multiple region names.
















   ..
       !! processed by numpydoc !!

.. py:property:: FaceZoneByPart
   :type: Optional[bool]


   
   Gets or sets whether to define an independent face zone for each input part.
















   ..
       !! processed by numpydoc !!

.. py:property:: FaceZoneName
   :type: Optional[str]


   
   This property is used to define the name of the default face zone name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: FieldName
   :type: Optional[str]


   
   Gets or sets the label name to be applied.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: Filename
   :type: Optional[str]


   
   Assign full path to the filename would like to Import/Export.
















   ..
       !! processed by numpydoc !!

.. py:property:: Filenames
   :type: Optional[str]


   
   Assign paths with ‘|’ seperator to this property to read multiple files, pass without seperator if single file.
















   ..
       !! processed by numpydoc !!

.. py:property:: FreeFaceMeshType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.FreeFaceMeshType]


   
   Gets or sets the type of elements for the MultiZone mesher free face mesh. Defaults to "All Quads". 
















   ..
       !! processed by numpydoc !!

.. py:property:: FreeVolumeMeshType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.FreeVolumeMeshType]


   
   Gets or sets how free mesh blocks should be treated by the MultiZone meshing algorithm. Defaults to "NotAllowed".
















   ..
       !! processed by numpydoc !!

.. py:property:: GrowthRate
   :type: Optional[float]


   
   Gradient of element size as each layer grows. 
















   ..
       !! processed by numpydoc !!

.. py:property:: HemisphereCenterModality
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.HemisphereCenterDefinitionType]


   
   This property is used to define the rule for the computation of the center of the hemispherical enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: HemisphereOrientationModality
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.HemisphereOrientationDefinitionType]


   
   This property is used to define the rule for the computation of the orientation of the hemispherical enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: IgnoreOrientation
   :type: Optional[bool]


   
   Gets or sets whether to ignore the face normal orientation while calculating the proximity for the Proximity Sizing control. The default value is False.
















   ..
       !! processed by numpydoc !!

.. py:property:: IgnoreSelfProximity
   :type: Optional[bool]


   
   Gets or sets whether to ignore the proximity between two faces from the same face zone while calculating the proximity for the Proximity Sizing control. The default value is True.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InnerScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   It is defined by value or outcome depending on if the Inner scope is defined manually by the user or defined based on a previous outcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: InnerScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part and it is applied to inner region of enclosure. 
















   ..
       !! processed by numpydoc !!

.. py:property:: InnerScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]


   
   If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: InnerScopePattern
   :type: Optional[str]


   
   The value can be a name of a region or a predefined patterns to select multiple region names.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputMeshScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   Gets or sets the type of scope definition for the Input Mesh scoping. Default: Value.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputMeshScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   Gets or sets the scoping method for the Input Mesh scoping. Default: Label.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputMeshScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]


   
   Gets or sets the scope outcome for Input Mesh scoping from a previous operation. Applicable only if InputMeshScopeDefinition is set to Outcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputMeshScopePattern
   :type: Optional[str]


   
   Gets or sets the zone or label name pattern that defines the Input Mesh scoping. Applicable only if InputMeshScopeDefinition is set to Value.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalLabelName
   :type: Optional[str]


   
   This property is used to rename the default Internal label name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSEngineeringModelControlAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: LabelName
   :type: Optional[str]


   
   This property is used to rename the default label name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: LateralDefeatureSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the defeature size to be used along the lateral direction of stacking.
















   ..
       !! processed by numpydoc !!

.. py:property:: Material
   :type: Optional[str]


   
   Gets or sets the Material.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialName
   :type: Optional[str]


   
   Gets or sets the Material Name.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialPointDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.MaterialPointDefineByType]


   
   Gets or sets the material point definition type.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialPointType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.MaterialPointType]


   
   It defines the type of material point, it can be “Include” or “Exclude”.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaxHoleSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the maximum size of holes to be considered for Wrapper Leak Prevention and Hole Patching.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaxSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the maximum size to be used for the volumetric size field sizing computation in the Proximity Sizing and Curvature Sizing controls. This is a length value.
















   ..
       !! processed by numpydoc !!

.. py:property:: MergeNodesTolerance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the tolerance within which nodes are to be merged.
















   ..
       !! processed by numpydoc !!

.. py:property:: MergeNodesToleranceType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.MergeNodesToleranceType]


   
   Gets or sets the merge nodes tolerance type to be used when executing Merge Nodes operation. The default value is Absolute.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshFlowControl
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.MeshFlowControl]


   
   This property gives control over the flow of mesh during surface mesh generation. The supported modes are None, and Global Cartesian.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshedVolumeLabelSuffix
   :type: Optional[str]


   
   Gets or sets the suffix to be used when defining labels scoped to volumes meshed by the MultiZone mesher. Defaults to "MultiZoneMesh".
















   ..
       !! processed by numpydoc !!

.. py:property:: MinSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the minimum size to be used for the volumetric size field sizing computation in the Proximity Sizing and Curvature Sizing controls. This is a length value.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimalNumberOfVolumetricLayers
   :type: Optional[int]


   
   It determines the minimal number of layers of volume elements to be created around the scoped body.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimalRadius
   :type: Optional[Ansys.Core.Units.Quantity]


   
   It defines the desired minimal radius of the spherical enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: MorphRecordingName
   :type: Optional[str]


   
   This property is used to define the name for matching the morphing recording to apply to the meshing operation.
















   ..
       !! processed by numpydoc !!

.. py:property:: NormalAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the maximum allowed normal angle between neighboring elements when computing curvature for the Curvature Sizing control. This value must be between 0 and 180 degrees (0 to π) and defaults to 18 degrees.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfAttempts
   :type: Optional[int]


   
   Number of attempts for mesh convergence.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfDivisions
   :type: Optional[int]


   
   Gets or sets the number of divisions for the scoped edges.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfLayers
   :type: Optional[int]


   
   Number of layers of mesh elements. 
















   ..
       !! processed by numpydoc !!

.. py:property:: OffsetFileName
   :type: Optional[str]


   
   Gets or sets the full file path to the .csv file containing the offset coordinates for replication.
















   ..
       !! processed by numpydoc !!

.. py:property:: OriginX
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the X coordinate of origin (location of base face) in the volume flattening step.
















   ..
       !! processed by numpydoc !!

.. py:property:: OriginY
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the Y coordinate of origin (location of base face) in the volume flattening step.
















   ..
       !! processed by numpydoc !!

.. py:property:: OriginZ
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the Z coordinate of origin (location of base face) in the volume flattening step.
















   ..
       !! processed by numpydoc !!

.. py:property:: PartName
   :type: Optional[str]


   
   Gets or sets the part name to be used when generating.
















   ..
       !! processed by numpydoc !!

.. py:property:: PercentageIncrement
   :type: Optional[float]


   
   The number of volumetric Layers determines the number of layers. This property decides whether all the layers are an equal size (default 0.0) or they should gradually increase the size of volume element than previous element.
















   ..
       !! processed by numpydoc !!

.. py:property:: ProjectSideFaces
   :type: Optional[bool]


   
   Gets or sets whether to project the side faces after the extrusion.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: ProtectOnlyBoundaries
   :type: Optional[bool]


   
   Gets or sets whether the topology protection flag is applied only to the exterior boundary of the scoped boundaries or not. Defaults to False.
















   ..
       !! processed by numpydoc !!

.. py:property:: QuadBoundaryLayerFaceScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   Gets or sets the type of scope definition for the quad boundary layer face scoping. Default: Value
















   ..
       !! processed by numpydoc !!

.. py:property:: QuadBoundaryLayerFaceScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   Gets or sets the scoping method for the quad boundary layer face scoping. Default: Label.
















   ..
       !! processed by numpydoc !!

.. py:property:: QuadBoundaryLayerFaceScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]


   
   Gets or sets the scope outcome from a previous operation. Applicable only if 'QuadBoundaryLayerFaceScopeDefinition' is set to Outcome. 
















   ..
       !! processed by numpydoc !!

.. py:property:: QuadBoundaryLayerFaceScopePattern
   :type: Optional[str]


   
   Gets or sets the part, zone or label name pattern that defines the scope. Applicable only if 'QuadBoundaryLayerFaceScopeDefinition' is set to Value. 
















   ..
       !! processed by numpydoc !!

.. py:property:: QuadBoundaryLayerFirstLayerHeight
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the height of the first quad layer. 
















   ..
       !! processed by numpydoc !!

.. py:property:: QuadBoundaryLayerGrowthRate
   :type: Optional[float]


   
   Gets or sets the ratio of heights between subsequent quad layers. 
















   ..
       !! processed by numpydoc !!

.. py:property:: QuadBoundaryLayerNumberOfDivisions
   :type: Optional[int]


   
   Gets or sets the number of annular divisions on the washer boundary from where the quad layers are grown. 
















   ..
       !! processed by numpydoc !!

.. py:property:: QuadBoundaryLayerNumberOfLayers
   :type: Optional[int]


   
   Gets or sets the number of quad layers on the washer boundary. 
















   ..
       !! processed by numpydoc !!

.. py:property:: RecomputeClosedVolumes
   :type: Optional[bool]


   
   Gets or sets whether to recompute closed volumes after the operation.
















   ..
       !! processed by numpydoc !!

.. py:property:: RegionType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.WrapperRegionType]


   
   It is defined by Material Point or External.
















   ..
       !! processed by numpydoc !!

.. py:property:: RelativeMergeTolerancePercentage
   :type: Optional[float]


   
   Gets or sets the percentage of the connected edge lengths to be used as tolerance for merging nodes.
















   ..
       !! processed by numpydoc !!

.. py:property:: Remesh
   :type: Optional[bool]


   
   Gets or sets whether to allow the remesh of already meshed volumes. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: RepairModel
   :type: Optional[bool]


   
   Gets or sets whether to repair the PrimeMesh model after the reading operation is executed. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: RestrictBoundaryNodes
   :type: Optional[bool]


   
   Gets or sets whether to restrict the boundary nodes displacement. The default value is true.
















   ..
       !! processed by numpydoc !!

.. py:property:: RetainMeshedVolumes
   :type: Optional[bool]


   
   Gets or sets whether existing mesh on the scoped volumes is to be retained or remeshed.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReverseSurfaceOrientation
   :type: Optional[bool]


   
   Reverse Surface Orientation. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScaleFactor
   :type: Optional[float]


   
   Scale Factor is used to scale shapes in different dimensions.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   It is defined by value or outcome. 
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   The method can be label/zone/part. 
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]


   
   If the InnerScopeDefinition is set to Outcome, then this property is visible. It defines the previous step outcome. This way we input the results of a previous step to the current step. The input applies to inner region of enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: ScopePattern
   :type: Optional[str]


   
   The value can be a name of a region or a predefined patterns to select multiple region names.
















   ..
       !! processed by numpydoc !!

.. py:property:: SeedFaceScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   Gets or sets the type of scope definition for the seed face scoping. Default: Value 
















   ..
       !! processed by numpydoc !!

.. py:property:: SeedFaceScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   Gets or sets the scoping method for the seed face scoping. Default: Label.
















   ..
       !! processed by numpydoc !!

.. py:property:: SeedFaceScopeOutcome
   :type: Optional[int]


   
   Gets or sets the scope outcome from a previous operation. Applicable only if SeedFaceScopeDefinition is set to Outcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: SeedFaceScopePattern
   :type: Optional[str]


   
   Gets or sets the part, zone or label name pattern that defines the scope. Applicable only if SeedFaceScopeDefinition is set to Value.
















   ..
       !! processed by numpydoc !!

.. py:property:: SharedTopologyLabelName
   :type: Optional[str]


   
   Gets or sets the name used as label to scope the shared topology faces which are automatically added as input mesh for MultiZone. Defaults to "MultiZoneMesh/SharedTopologyInputMesh".
















   ..
       !! processed by numpydoc !!

.. py:property:: SizeFieldDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   Gets or sets how the control's size field pattern should be defined, either by "Value" or by "Outcome". The default value is "Value".
















   ..
       !! processed by numpydoc !!

.. py:property:: SizeFieldOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]


   
   Gets or sets the outcome to be used to define the size field pattern when SizeFieldDefinition is set to "Outcome".
















   ..
       !! processed by numpydoc !!

.. py:property:: SizeFieldPattern
   :type: Optional[str]


   
   This property is used to define the name pattern for matching the size fields to apply to the meshing operation.
















   ..
       !! processed by numpydoc !!

.. py:property:: SmoothingIterations
   :type: Optional[int]


   
   Allows user to input number of iterations needed to achieve good mesh results.
















   ..
       !! processed by numpydoc !!

.. py:property:: SmoothingPreserveVolume
   :type: Optional[bool]


   
   Gets or sets whether to enable and disable the volume preserving smoothing. If enabled, the smoothing will preserve the initial volume of the input. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceTargetScopeDefinition
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType]


   
   Gets or sets the type of scope definition for the Source/Target scoping. Default: Value.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceTargetScopeMethod
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeType]


   
   Gets or sets the scoping method for the Source/Target scoping. Default: Label.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceTargetScopeOutcome
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]


   
   Gets or sets the scope outcome for the Source/Target scoping from a previous operation. Applicable only if SourceTargetScopeDefinition is set to Outcome.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceTargetScopePattern
   :type: Optional[str]


   
   Gets or sets the zone or label name pattern that defines the Source/Target scoping. Applicable only if SourceTargetScopeDefinition is set to Value.
















   ..
       !! processed by numpydoc !!

.. py:property:: SphereCenterModality
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SphereCenterDefinitionType]


   
   This property is used to define the rule for the computation of the center of the spherical enclosure.
















   ..
       !! processed by numpydoc !!

.. py:property:: StackingDefeatureSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Defines defeature size to be used along the stacking direction.
















   ..
       !! processed by numpydoc !!

.. py:property:: SurfaceMeshType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SurfaceMeshType]


   
   This property gives control over what type of elements need to be generated in the mesh. The supported surface mesh types are Triangles and Quadrilaterals. 
















   ..
       !! processed by numpydoc !!

.. py:property:: SweepingSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the constant size along the sweeping direction.
















   ..
       !! processed by numpydoc !!

.. py:property:: TargetSkewness
   :type: Optional[float]


   
   Set Limit to the skewness of an element. Higher the skewness value, expecting a better mesh result.
















   ..
       !! processed by numpydoc !!

.. py:property:: Thickness
   :type: Optional[float]


   
   Gets or sets the Thickness to be assigned to the scoped zone.
















   ..
       !! processed by numpydoc !!

.. py:property:: TopologyConformalConnection
   :type: Optional[bool]


   
   Gets or sets whether to preserve the topology connection for the newly created faces. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: TriangleCountReductionMode
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.TriangleCountReductionMode]


   
   This property gives control over the mode/degree of triangle count reduction during surface mesh generation. The supported modes are None, Conservative and Aggressive.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: VolumeMeshType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.VolumeMeshType]


   
   Type of Volume elements such as Tetrahedrons and Hex.
















   ..
       !! processed by numpydoc !!

.. py:property:: VolumeZoneName
   :type: Optional[str]


   
   This property is used to rename the default volume zone name generated during execution of step.
















   ..
       !! processed by numpydoc !!

.. py:property:: WrapByParts
   :type: Optional[bool]


   
   Gets or sets whether to wrap each part separately. The default value is false.
















   ..
       !! processed by numpydoc !!

.. py:property:: XCoordinate
   :type: Optional[Ansys.Core.Units.Quantity]


   
   It defines the X Coordinate.
















   ..
       !! processed by numpydoc !!

.. py:property:: YCoordinate
   :type: Optional[Ansys.Core.Units.Quantity]


   
   It defines the Y Coordinate.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZCoordinate
   :type: Optional[Ansys.Core.Units.Quantity]


   
   It defines the Z Coordinate.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!



.. vale on